--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "aos": "^2.3.4",
+    "dotenv": "^16.0.1",
+    "framer-motion": "^8.2.4",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "dotenv": "^16.0.1",
     "react-horizontal-scrolling-menu": "^3.0.1",
     "react-icons": "^4.4.0",
     "react-loader-spinner": "^5.1.5",
